--- a/PredictGestures.html
+++ b/PredictGestures.html
@@ -28,6 +28,10 @@
 	<script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>	
     </head>
     <body>
+        <form id="myform">
+            <input id="username" type="text" name="username" placeholder="name">
+            <button onclick="return SignIn();" type="submit">Sign in</button>
+        </form>
         <main>
             Hello World!
         </main>
