--- a/PredictGestures.html
+++ b/PredictGestures.html
@@ -35,5 +35,11 @@
         <main>
             Hello World!
         </main>
+        <ul id="users">
+            <li>user1</li>
+            <li>mario</li>
+            <li>kasandra</li>
+            <li>luis</li>
+        </ul>
     </body>
 </html>
