--- a/PredictGestures.html
+++ b/PredictGestures.html
@@ -35,11 +35,11 @@
         <main>
             Hello World!
         </main>
-        <ul id="users">
+        <ul id="users" style = "color:white">
             <li>user1</li>
-            <li>mario</li>
-            <li>kasandra</li>
-            <li>luis</li>
+            <li id="mario_name">mario</li><li id="mario_signins">1</li>
+            <li id="kasandra_name">kasandra</li><li id="kasandra_signins">1</li>
+            <li id="luis_name">luis</li><li id="luis_signins">1</li>
         </ul>
     </body>
 </html>
